--- a/style.css
+++ b/style.css
@@ -97,3 +97,54 @@ button:hover {
     top: 10px;
     left: 10px;
 }
+
+#card-type {
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    width: 100%;
+    margin-bottom: 10px;
+}
+ 
+#card-type::after {
+    content: '▼';
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+}
+ 
+#card-type option {
+    background-color: #fff;
+    color: #333;
+}
+#firework-container {
+    position: fixed;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    pointer-events: none;
+    z-index: 1000;
+  }
+  
+  .firework {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background-color: #ffcc00; /* Havai fişek rengi */
+    border-radius: 50%;
+    opacity: 0;
+    animation: explode 1s ease-out;
+  }
+  
+  @keyframes explode {
+    0% {
+      transform: scale(1);
+      opacity: 1;
+    }
+    100% {
+      transform: scale(30);
+      opacity: 0;
+    }
+  }
