--- a/style.css
+++ b/style.css
@@ -1,19 +1,42 @@
 body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #f5f5f5;
+    overflow: hidden; /* Body içindeki içeriklerin taşmasını önlemek için overflow'ı hidden yapın */
 }
 
-#login-container,
-#game-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
+#canvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1; /* Diğer içeriklerin üzerine çıkmasını sağlamak için z-index kullanın */
+}
+
+header {
+    background-color: #3498db;
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+    border-radius: 0 0 10px 10px;
+}
+
+#logo {
+    max-width: 100px;
+}
+
+h1, h2 {
+    margin: 0;
+}
+
+.container {
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 20px auto;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    max-width: 800px;
 }
 
 #login-form {
@@ -22,27 +45,27 @@ body {
     align-items: center;
 }
 
-h1 {
-    color: #333;
-}
-
 label {
-    margin-bottom: 5px;
+    margin-bottom: 10px;
+    font-size: 18px;
+    text-align: left;
 }
 
-input {
-    padding: 8px;
-    margin-bottom: 10px;
+input,
+select {
+    padding: 10px;
+    margin-bottom: 20px;
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 16px;
+    width: calc(100% - 22px);
 }
 
 button {
-    background-color: #2ecc71;
+    background-color: #27ae60;
     color: #fff;
-    padding: 10px 20px;
-    font-size: 16px;
+    padding: 15px 30px;
+    font-size: 18px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -50,14 +73,52 @@ button {
 }
 
 button:hover {
-    background-color: #27ae60;
+    background-color: #219653;
 }
 
+.scoreboard-container {
+    max-width: 800px;
+    margin: 20px auto;
+}
+
+#score-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+
+#score-table th, #score-table td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+}
+
+#score-table th {
+    background-color: #f2f2f2;
+}
+
+#score-list tr:hover {
+    background-color: #f5f5f5;
+}
+
+#timer {
+    text-align: center;
+    font-size: 1.5em;
+    color: #333; 
+    margin-bottom: 20px; 
+}
 .grid {
     display: grid;
-    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+    grid-gap: 15px;
+    margin-top: 20px;
 }
-
+#game-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+}
 .card {
     width: 100px;
     height: 100px;
@@ -75,29 +136,9 @@ button:hover {
     border-radius: 8px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
-
 .card.open {
     transform: rotateY(180deg);
 }
-
-#buttons {
-    margin-top: 20px;
-}
-
-#scoreboard {
-    color: #e74c3c;
-    font-size: 20px;
-    margin-top: 10px;
-}
-
-#logo {
-    max-width: 10%;
-    margin: 10px;
-    position: fixed;
-    top: 10px;
-    left: 10px;
-}
-
 #card-type {
     padding: 8px;
     border: 1px solid #ccc;
@@ -119,32 +160,19 @@ button:hover {
     background-color: #fff;
     color: #333;
 }
-#firework-container {
-    position: fixed;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    pointer-events: none;
-    z-index: 1000;
-  }
-  
-  .firework {
-    position: absolute;
-    width: 10px;
-    height: 10px;
-    background-color: #ffcc00; /* Havai fişek rengi */
-    border-radius: 50%;
-    opacity: 0;
-    animation: explode 1s ease-out;
-  }
-  
-  @keyframes explode {
-    0% {
-      transform: scale(1);
-      opacity: 1;
-    }
-    100% {
-      transform: scale(30);
-      opacity: 0;
-    }
-  }
+
+
+
+
+#canvas {
+    display: none;
+}
+#buttons {
+    margin-top: 20px;
+}
+
+#scoreboard {
+    color: #e74c3c;
+    font-size: 20px;
+    margin-top: 10px;
+}
