--- a/client/style.css
+++ b/client/style.css
@@ -2,7 +2,6 @@ body {
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #f5f5f5;
-    overflow: hidden; /* Body içindeki içeriklerin taşmasını önlemek için overflow'ı hidden yapın */
 }
 
 #canvas {
@@ -11,7 +10,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: -1; /* Diğer içeriklerin üzerine çıkmasını sağlamak için z-index kullanın */
+    z-index: -1;
 }
 
 header {
@@ -26,7 +25,8 @@ header {
     max-width: 100px;
 }
 
-h1, h2 {
+h1,
+h2 {
     margin: 0;
 }
 
@@ -87,7 +87,8 @@ button:hover {
     margin-top: 20px;
 }
 
-#score-table th, #score-table td {
+#score-table th,
+#score-table td {
     border: 1px solid #ddd;
     padding: 8px;
     text-align: left;
@@ -104,21 +105,24 @@ button:hover {
 #timer {
     text-align: center;
     font-size: 1.5em;
-    color: #333; 
-    margin-bottom: 20px; 
+    color: #333;
+    margin-bottom: 20px;
 }
+
 .grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
     grid-gap: 15px;
     margin-top: 20px;
 }
+
 #game-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 20px;
 }
+
 .card {
     width: 100px;
     height: 100px;
@@ -136,9 +140,11 @@ button:hover {
     border-radius: 8px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
+
 .card.open {
     transform: rotateY(180deg);
 }
+
 #card-type {
     padding: 8px;
     border: 1px solid #ccc;
@@ -147,7 +153,7 @@ button:hover {
     width: 100%;
     margin-bottom: 10px;
 }
- 
+
 #card-type::after {
     content: '▼';
     position: absolute;
@@ -155,18 +161,16 @@ button:hover {
     right: 10px;
     transform: translateY(-50%);
 }
- 
+
 #card-type option {
     background-color: #fff;
     color: #333;
 }
 
-
-
-
 #canvas {
     display: none;
 }
+
 #buttons {
     margin-top: 20px;
 }
@@ -175,4 +179,30 @@ button:hover {
     color: #e74c3c;
     font-size: 20px;
     margin-top: 10px;
+}
+
+.image-container {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 40px;
+}
+
+.image-container img {
+    max-width: 80px;
+    height: auto;
+    margin-right: 8px;
+}
+
+.item-container {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.item-label {
+    display: block;
+    font-size: 14px;
+    margin-top: 5px;
+    margin-left: 35px;
+    color: #d20a0a;
+    font-weight: bold;
 }
