--- a/client/style.css
+++ b/client/style.css
@@ -1,7 +1,16 @@
 body {
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f5f5f5;
+    background: linear-gradient(to bottom, #3498db, #2ecc71);
+    background-attachment: fixed;
+}
+
+
+header {
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+    border-radius: 0 0 10px 10px;
 }
 
 #canvas {
@@ -11,14 +20,6 @@ body {
     width: 100%;
     height: 100%;
     z-index: -1;
-}
-
-header {
-    background-color: #3498db;
-    color: #fff;
-    text-align: center;
-    padding: 20px;
-    border-radius: 0 0 10px 10px;
 }
 
 #logo {
@@ -79,6 +80,10 @@ button:hover {
 .scoreboard-container {
     max-width: 800px;
     margin: 20px auto;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    background-color: #f8f8f8;
+    border-radius: 10px;
+    padding: 20px;
 }
 
 #score-table {
@@ -92,6 +97,7 @@ button:hover {
     border: 1px solid #ddd;
     padding: 8px;
     text-align: left;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
 }
 
 #score-table th {
@@ -100,6 +106,19 @@ button:hover {
 
 #score-list tr:hover {
     background-color: #f5f5f5;
+    cursor: pointer;
+    transform: scale(1.05);
+    -webkit-box-shadow: 0px 5px 15px 8px #e4e7fb;
+    box-shadow: 0px 5px 15px 8px #e4e7fb;
+}
+
+#score-list tr:first-child {
+    background: linear-gradient(to right, #6c6ce7, #a0a0e7);
+    color: #fff;
+    font-weight: 700;
+    transform: scale(1.05);
+    -webkit-box-shadow: 0px 5px 15px 8px #e4e7fb;
+    box-shadow: 0px 5px 15px 8px #e4e7fb;
 }
 
 #timer {
@@ -121,6 +140,10 @@ button:hover {
     flex-direction: column;
     align-items: center;
     margin-top: 20px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    background-color: #f8f8f8;
+    border-radius: 10px;
+    padding: 20px;
 }
 
 .card {
@@ -128,7 +151,7 @@ button:hover {
     height: 100px;
     background-color: #3498db;
     color: #fff;
-    font-size: 24px;
+    font-size: 70px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -205,4 +228,16 @@ button:hover {
     margin-left: 35px;
     color: #d20a0a;
     font-weight: bold;
+}
+
+.scoreboard-container h2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+}
+
+.cup-icon {
+    margin-left: 10px;
+    font-size: 24px;
 }
